# freelance-bot

./: .gitignore  Notizen.txt  README.md  agencies.xlsx  agencies_enriched.xlsx  agencies_full.xlsx  agencies_new_cleaned.xlsx  agency_emails.xlsx  agency_emails_new.xlsx  function_app.py  new_projects_cleaned.xlsx  new_projects_raw.xlsx  package-lock.json  package.json  pyproject-BK_Surface9.toml  pyproject.toml  requirements.txt  scrapeNewEntries.py
.github/workflows/: main_af-freelancebot-prod.yml
.profile_freelance2/: Last Browser  Local State  first_party_sets.db
.profile_freelance2/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
.profile_freelance2/Default/DawnGraphiteCache/: index
.profile_freelance2/Default/DawnWebGPUCache/: index
.profile_freelance2/Default/Extension Rules/: LOG
.profile_freelance2/Default/GCM Store/: LOG  (+1 more)
.profile_freelance2/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  index
.profile_freelance2/GraphiteDawnCache/: index
.profile_freelance2/ShaderCache/: index
.profile_freelance2/segmentation_platform/: ukm_db
FreelanceActions/: __init__.py
ListManager/: __init__.py  test.py
ScrapeEntry/: __init__.py
ScrapeNewEntries/: __init__.py  function.json
Trainingsdaten/: 001.txt
src/freelance-bot/: entryScraper.py  freelance_actions.py
src/freelanceBot/: check_email_exists.py  freelance_actions.py  freelance_agencies.py  freelance_agents_excel.py  freelance_projects.py  mail_template.yml  main.py  send_email.py
utils/: KVManager.py
(+240 files in other folders)
