[project]
name = "freelance-bot"
version = "0.1.0"
description = "Bot for freelance activities"
authors = [
    {name = "AbakusNantis",email = "bastian.knaus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "azure-storage-blob (>=12.26.0,<13.0.0)",
    "azure-core (>=1.35.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "azure-identity (>=1.24.0,<2.0.0)",
    "azure-keyvault (>=4.2.0,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "azure-functions (>=1.23.0,<2.0.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "nameparser (>=1.1.3,<2.0.0)",
    "gender-guesser (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# keep package mode ON (default) and point to your src package
packages = [{ include = "freelanceBot", from = "src" }]
